# QuantHUD

./: .gitignore  MACOS_TROUBLESHOOTING.md  README.md  TESTING.md  VERSION.md  nuxt.config.ts  package-lock.json  package.json
.github/workflows/: README.md  build.yml
assets/css/: main.css
components/: CalculatorCard.vue  CalendarModule.vue  ChartAnalyzerHistory.vue  ChartAnalyzerModule.vue  ClipboardHistoryModule.vue  ColorPickerModule.vue  GeneralCalcModule.vue  LevelsCard.vue  NotesModule.vue  ResultsCard.vue  ScreenshotHistoryModule.vue  SettingsModal.vue  ShortcutsModule.vue  Sidebar.vue  TodoModule.vue  TranscriptModule.vue  WorldClockModule.vue
composables/: useAutoHide.ts  useCalendar.ts  useChartAnalyzer.ts  useClipboardHistory.ts  useColorPicker.ts  useConfig.ts  useGeneralCalc.ts  useNotes.ts  useScreenshotHistory.ts  useShortcuts.ts  useStateSync.ts  useTodos.ts  useTranscript.ts  useWorldClock.ts
pages/: color-picker-overlay.vue  index.vue  region-selector.vue  screenshot-preview.vue
scripts/: check-macos-compatibility.sh  download-and-test-artifacts.ps1  sign-dev.ps1  sync-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: capture.rs  config.rs  lib.rs  main.rs
