[package]
name = "quanthud"
version = "1.0.1"
description = "QuantHUD - Fibonacci Level Extractor for Trading"
authors = ["QuantableX"]
edition = "2021"

[lib]
name = "quanthud_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.8"
image = "0.25"
base64 = "0.22"
dirs = "5"
thiserror = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

