[package]
name = "quanthud"
version = "1.0.6"
description = "QuantHUD - Fibonacci Level Extractor for Trading"
authors = ["QuantableX"]
edition = "2021"

[lib]
name = "quanthud_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.8"
image = "0.25"
base64 = "0.22"
dirs = "5"
rfd = "0.15"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Media_SpeechRecognition",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

