[package]
name = "quanthud"
version = "1.1.0"
description = "QuantHUD - Fibonacci Level Extractor for Trading"
authors = ["QuantableX"]
edition = "2021"

[lib]
name = "quanthud_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.8"
image = "0.25"
base64 = "0.22"
dirs = "5"
rfd = "0.15"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Media_SpeechRecognition",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

